fix gap .card

--- a/style.css
+++ b/style.css
@@ -312,6 +312,7 @@ color: var(--blue);
 
 .flex {
   display: flex;
+  column-gap: 30px;
 }
 
 .master {
